--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 </head>
 <body>
     <div class="Main">
-        <h1>Тестовое приложение</h1>
+        <h1>Замены в расписании</h1>
         <img src="{{ url_for('static', filename='bot.png') }}" alt="123">
-        <p></p>
-        <button class="btn">Кнопка</button>
+        <p>Ваш класс</p>
+        <button class="btn">8а</button>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
