--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 <body>
     <div class="Main">
         <h1>Замены в расписании</h1>
-        <img src="{{ url_for('static', filename='bot.png') }}" alt="123">
-        <p>Ваш класс</p>
-        <button class="btn">8а</button>
+        <p>Ваш класс:</p>
+        <select><option>8а</option>
+            <option>8б</option></select>
+        
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
