--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <script>
     function sendClass(className) {
         // Отправляем сообщение в Telegram-бот через deep link
-        const botUrl = `https://t.me/Minecraft_Bedrok_Bot?start=${className}`;
+        const botUrl = `https://t.me/controlmenubot?start=${className}`;
         window.location.href = botUrl;
     }
 </script>
