--- a/index.html
+++ b/index.html
@@ -1,86 +1,142 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Замены в расписании</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    .container { max-width: 600px; margin: 0 auto; }
-    .class-list, .schedule { margin: 20px 0; }
-    .class-item { cursor: pointer; padding: 10px; background: #f0f0f0; margin-bottom: 5px; }
-    .class-item:hover { background: #d9d9d9; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Заменяй уроки!</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 20px;
+        }
+
+        select {
+            padding: 10px;
+            font-size: 16px;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            margin-top: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        table, th, td {
+            border: 1px solid black;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        #schedule {
+            margin-top: 20px;
+        }
+
+        #message {
+            color: red;
+            font-size: 18px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Выбор класса</h1>
-    <div class="class-list" id="class-list">
-      <!-- Классы будут подгружаться сюда -->
-    </div>
-    <div class="schedule" id="schedule">
-      <!-- Расписание замен будет отображаться здесь -->
-    </div>
-  </div>
 
-  <script>
-    const classes = ["5а", "5б", "5в", "6а", "6б", "7а", "7б", "8а", "8б", "8в", "9а", "9б",
-    "9в", "10а", "10б", "11а", "11б"]; // Список классов
+<h1>Заменяй уроки!</h1>
 
-    const classList = document.getElementById('class-list');
-    const schedule = document.getElementById('schedule');
+<!-- Выбор класса -->
+<label for="classSelect">Выберите класс:</label>
+<select id="classSelect">
+    <option value="5а">5а</option>
+    <option value="5б">5б</option>
+    <option value="5в">5в</option>
+    <option value="6а">6а</option>
+    <option value="6б">6б</option>
+    <option value="7а">7а</option>
+    <option value="7б">7б</option>
+    <option value="8а">8а</option>
+    <option value="8б">8б</option>
+    <option value="8в">8в</option>
+    <option value="9а">9а</option>
+    <option value="9б">9б</option>
+    <option value="9в">9в</option>
+    <option value="10а">10а</option>
+    <option value="10б">10б</option>
+    <option value="11а">11а</option>
+    <option value="11б">11б</option>
+</select>
 
-    // Рендер списка классов
-    classes.forEach(className => {
-      const div = document.createElement('div');
-      div.textContent = className;
-      div.className = 'class-item';
-      div.onclick = () => fetchSchedule(className);
-      classList.appendChild(div);
-    });
+<!-- Кнопка для получения расписания -->
+<button onclick="getSchedule()">Показать замены</button>
 
-    // Функция загрузки данных для конкретного класса
-    async function fetchSchedule(className) {
-      schedule.innerHTML = `<p>Загрузка расписания для ${className}...</p>`;
-      try {
-        const response = await fetch(`/api/schedule/${className}`);
-        const data = await response.json();
-        renderSchedule(data);
-      } catch (error) {
-        schedule.innerHTML = `<p>Ошибка загрузки данных.</p>`;
-      }
+<!-- Сообщение, если нет замен -->
+<div id="message"></div>
+
+<!-- Таблица с расписанием -->
+<div id="schedule"></div>
+
+<script>
+    // Функция для получения расписания
+    function getSchedule() {
+        const className = document.getElementById('classSelect').value;
+        const scheduleDiv = document.getElementById('schedule');
+        const messageDiv = document.getElementById('message');
+
+        // Очищаем предыдущие данные
+        scheduleDiv.innerHTML = '';
+        messageDiv.innerHTML = '';
+
+        // Запрос к API для получения расписания
+        fetch(`/api/schedule/${className}`)
+            .then(response => response.json())
+            .then(data => {
+                if (data.message) {
+                    // Если нет замен
+                    messageDiv.innerHTML = data.message;
+                } else {
+                    // Создаем таблицу для отображения расписания
+                    let tableHTML = '<table>';
+                    tableHTML += '<thead><tr><th>№ урока</th><th>Урок</th><th>Учитель</th><th>№ урока</th><th>Урок</th><th>Учитель</th><th>Кабинет</th></tr></thead>';
+                    tableHTML += '<tbody>';
+
+                    data.Замены.forEach(row => {
+                        tableHTML += `<tr>
+                            <td>${row['№ урока 1']}</td>
+                            <td>${row['Урок 1']}</td>
+                            <td>${row['Учитель 1']}</td>
+                            <td>${row['№ урока 2']}</td>
+                            <td>${row['Урок 2']}</td>
+                            <td>${row['Учитель 2']}</td>
+                            <td>${row['Кабинет']}</td>
+                        </tr>`;
+                    });
+
+                    tableHTML += '</tbody></table>';
+                    scheduleDiv.innerHTML = tableHTML;
+                }
+            })
+            .catch(error => {
+                messageDiv.innerHTML = "Произошла ошибка при загрузке данных.";
+            });
     }
+</script>
 
-    // Рендер расписания
-    function renderSchedule(data) {
-    if (!data || !data.length) {
-      schedule.innerHTML = `<p>Нет замен для выбранного класса.</p>`;
-      return;
-    }
-    schedule.innerHTML = `<h2>Замены для ${data[0].Класс}</h2>`;
-    const table = document.createElement('table');
-    table.border = '1';
-    const header = `
-      <tr>
-        <th>№ урока</th>
-        <th>Урок</th>
-        <th>Учитель</th>
-        <th>Кабинет</th>
-      </tr>`;
-    table.innerHTML = header;
-
-    data.forEach(row => {
-      const tr = `
-        <tr>
-          <td>${row['№ урока'] || ''}</td>
-          <td>${row['Урок'] || ''}</td>
-          <td>${row['Учитель'] || ''}</td>
-          <td>${row['Кабинет'] || ''}</td>
-        </tr>`;
-      table.innerHTML += tr;
-    });
-    schedule.appendChild(table);
-  }
-  </script>
 </body>
 </html>
