--- a/index.html
+++ b/index.html
@@ -3,42 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Расписание замен</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <title>Замены в расписании</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
+            font-family: 'Roboto', sans-serif;
+            background: linear-gradient(to bottom, #74ebd5, #acb6e5);
+            color: #333;
         }
         .container {
             max-width: 800px;
-            margin: 20px auto;
+            margin: 50px auto;
             padding: 20px;
             background: white;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
-        h1 {
-            font-size: 24px;
-            margin-bottom: 20px;
+        header {
             text-align: center;
+            margin-bottom: 20px;
+        }
+        header h1 {
+            font-size: 2.5rem;
+            color: #4a90e2;
+            margin: 0;
         }
         label {
-            font-size: 16px;
             display: block;
+            font-size: 1rem;
             margin-bottom: 10px;
+            font-weight: bold;
         }
         select, button {
-            display: block;
             width: 100%;
             padding: 10px;
+            font-size: 1rem;
+            border: none;
+            border-radius: 8px;
             margin-bottom: 20px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        select {
+            background: #f9f9f9;
+        }
+        button {
+            background: #4a90e2;
+            color: white;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+        button:hover {
+            background: #357ab8;
         }
         table {
             width: 100%;
@@ -46,40 +62,36 @@
             margin-top: 20px;
         }
         th, td {
-            text-align: left;
             padding: 10px;
-            border: 1px solid #ddd;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
         }
         th {
-            background-color: #f4f4f4;
+            background: #4a90e2;
+            color: white;
         }
-        #error-message {
-            color: red;
-            font-weight: bold;
+        td {
+            background: #f9f9f9;
+        }
+        .no-data {
             text-align: center;
-            display: none;
-        }
-        #schedule-container {
-            margin-top: 20px;
-        }
-        #schedule-table, #no-schedule-message {
-            display: none;
+            color: #555;
+            font-size: 1.2rem;
         }
     </style>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const loadButton = document.getElementById('load-schedule');
             const classSelect = document.getElementById('class-select');
+            const loadButton = document.getElementById('load-schedule');
+            const tableContainer = document.getElementById('table-container');
             const scheduleTable = document.getElementById('schedule-table');
-            const scheduleTableBody = document.querySelector('#schedule-table tbody');
-            const noScheduleMessage = document.getElementById('no-schedule-message');
-            const errorMessage = document.getElementById('error-message');
+            const noDataMessage = document.getElementById('no-data-message');
 
             loadButton.addEventListener('click', () => {
                 const selectedClass = classSelect.value;
 
                 if (!selectedClass) {
-                    alert('Выберите класс!');
+                    alert('Пожалуйста, выберите класс!');
                     return;
                 }
 
@@ -91,22 +103,29 @@
                         return response.json();
                     })
                     .then(data => {
-                        // Очистка таблицы
-                        scheduleTableBody.innerHTML = '';
-                        scheduleTable.style.display = 'none';
-                        noScheduleMessage.style.display = 'none';
+                        // Очистка таблицы перед загрузкой новых данных
+                        scheduleTable.innerHTML = '';
+                        tableContainer.style.display = 'block';
+                        noDataMessage.style.display = 'none';
 
-                        // Получаем данные замен
-                        const schedule = data[selectedClass];
-
-                        if (!schedule || schedule.length === 0) {
-                            noScheduleMessage.textContent = `Нет замен для класса ${selectedClass}.`;
-                            noScheduleMessage.style.display = 'block';
+                        if (!data[selectedClass] || data[selectedClass].length === 0) {
+                            noDataMessage.textContent = 'Нет замен для выбранного класса';
+                            noDataMessage.style.display = 'block';
+                            tableContainer.style.display = 'none';
                             return;
                         }
 
-                        // Заполняем таблицу
-                        schedule.forEach(row => {
+                        // Добавление заголовков таблицы
+                        scheduleTable.innerHTML = `
+                            <tr>
+                                <th>№ урока</th>
+                                <th>Предмет</th>
+                                <th>Учитель</th>
+                                <th>Кабинет</th>
+                            </tr>`;
+
+                        // Заполнение таблицы
+                        data[selectedClass].forEach((row, index) => {
                             const tr = document.createElement('tr');
                             tr.innerHTML = `
                                 <td>${row.lesson_number}</td>
@@ -114,15 +133,12 @@
                                 <td>${row.teacher}</td>
                                 <td>${row.room}</td>
                             `;
-                            scheduleTableBody.appendChild(tr);
+                            scheduleTable.appendChild(tr);
                         });
-
-                        // Показываем таблицу
-                        scheduleTable.style.display = 'table';
                     })
                     .catch(error => {
-                        console.error(error);
-                        errorMessage.style.display = 'block';
+                        console.error('Ошибка:', error);
+                        alert('Произошла ошибка при загрузке данных. Пожалуйста, попробуйте позже.');
                     });
             });
         });
@@ -130,7 +146,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Расписание замен</h1>
+        <header>
+            <h1>Замены в расписании</h1>
+        </header>
+
         <label for="class-select">Выберите класс:</label>
         <select id="class-select">
             <option value="">-- Выберите класс --</option>
@@ -154,25 +173,10 @@
         </select>
         <button id="load-schedule">Показать замену</button>
 
-        <div id="schedule-container">
-            <table id="schedule-table">
-                <thead>
-                    <tr>
-                        <th>№ урока</th>
-                        <th>Предмет</th>
-                        <th>Учитель</th>
-                        <th>Кабинет</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Данные будут загружены сюда -->
-                </tbody>
-            </table>
-            <p id="no-schedule-message"></p>
-        </div>
+        <div id="no-data-message" class="no-data" style="display: none;"></div>
 
-        <div id="error-message">
-            Произошла ошибка при загрузке данных. Попробуйте снова.
+        <div id="table-container" style="display: none;">
+            <table id="schedule-table"></table>
         </div>
     </div>
 </body>
