--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             font-family: 'Roboto', sans-serif;
-            background: linear-gradient(to bottom, #74ebd5, #acb6e5);
+            background: #4a90e2;
             color: #333;
         }
         .container {
